--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,67 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+  background-color: #aa7cf4;
+  color: #fff;
+  font-weight: bold;
+}
+
+.Counter {
+  display: flex;
   align-items: center;
+  margin: 0 auto;
+}
+
+.Counter div {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+}
+
+.Counter button {
+  font-size: 1.5rem;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  background-color: #fff;
+  color: #aa7cf4;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.LoadDynamicComponent {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.LoadDynamicComponent button {
+  margin: 0 auto;
+  width: 200px;
+  border-radius: 5px;
+  border: none;
+  background-color: #fff;
+  color: #aa7cf4;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.VersionList {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.VersionList a {
+  margin: 0 auto;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
 }
