--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
+:root {
+  --first-color: #d61e1e;
+  --second-color: #c6b8b8;
+}
+
 .App {
   text-align: center;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #aa7cf4;
-  color: #fff;
+  background-color: var(--first-color);
+  color: var(--second-color);
   font-weight: bold;
 }
 
@@ -28,8 +33,8 @@
   height: 40px;
   border-radius: 50%;
   border: none;
-  background-color: #fff;
-  color: #aa7cf4;
+  background-color: var(--second-color);
+  color: var(--first-color);
   margin: 0 10px;
   cursor: pointer;
 }
@@ -46,8 +51,8 @@
   width: 200px;
   border-radius: 5px;
   border: none;
-  background-color: #fff;
-  color: #aa7cf4;
+  background-color: var(--second-color);
+  color: var(--first-color);
   font-weight: bold;
   cursor: pointer;
 }
@@ -61,7 +66,7 @@
 
 .VersionList a {
   margin: 0 auto;
-  color: #fff;
+  color: var(--second-color);
   font-weight: bold;
   cursor: pointer;
 }
